src/styles/styles.styl
/*
  Global
*/

*
  font-family 'Merriweather', serif !important
  font-weight 300
i.icon
  font-family 'Icons' !important

#global-header
  .column.wide
    padding-bottom 0.5em !important

#logo
  padding 1em
  
#menu
  background none transparent
  border none
  box-shadow none
  padding-right 1em !important
  a
    letter-spacing .35em
    line-height 3em
    margin 2em 1em
    padding 0em 1em
    text-transform uppercase

#mobile_menu_toggle
  color #333333
  font-size 2em
  position absolute
  right 1em
  top 1.4em
  cursor pointer

@media only screen and (min-width: 1000px) 
  #mobile_menu_toggle
    display none
  #menu
    display flex !important

@media only screen and (max-width: 1000px) 
  #logo
    padding-right 4em
  #menu
    display none

footer
  h3
    font-weight 300
    line-height 3em
  img
    display inline-block !important
  span
    color #000000
    margin 0 .5em

@media only screen and (max-width: 1000px) 
  footer *
    text-align center
    margin 0 auto

